Fixed Bell tooltip on mobile

--- a/style/desktop_mq.css
+++ b/style/desktop_mq.css
@@ -74,3 +74,7 @@ div.box {
     right: 21rem !important;
     padding: 0 !important;
 }
+#div-bell span {
+    top: 1.6rem !important;
+    right: 23rem !important;
+}
